# utencore

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  build_windows.bat  debug_line.py  debug_parse.py  extract.sh  final_test.py  generate_handlers.py  install-uc.sh
compilers/py2uc/: Cargo.toml  build.rs  py2uc.plugin.json
compilers/py2uc/lib/python/: builtins.py
compilers/py2uc/lib/utenstd/: io.py  math.py  sys.py
compilers/py2uc/src/: ast.rs  codegen.rs  lib.rs  parser.rs  tokenizer.rs  tokenizer_handlers.rs
compilers/py2uc/tests/: compile_tests.rs
docs/: architecture.md  builtins.md  bytecode-format.md  cib-ffi.md  compiler-plugin.md  garbage-collector.md  index.md  module-system.md  opcodes.md  roadmap.md  type-system.md
tests/: debug_parse2.py  smoke_test.py
tests/features/: classes.py
uc-binaries/: Cargo.toml
uc-binaries/src/: lib.rs
ucif/: python3.ucif  python3.ucif.yaml
ucif-compiler/: Cargo.toml
ucif-compiler/src/: main.rs
ucsl/: math.uclib  mathlib.uclib  mylib.uclib  sys.uclib
ucsl/utenstd/: index.json  io.uclib  utenstd.plugin.json
utencore-bytecode/: Cargo.toml
utencore-bytecode/src/: bytecode.rs  lib.rs  tests.rs
utencore-core/: Cargo.toml
utencore-core/src/: ir.rs  lib.rs
utencore-core/src/ccis/: mod.rs
utencore-core/src/cib/: Marshal.rs  ffi.rs  mod.rs  structs.rs  ucif.rs
utencore-core/src/ir/: mod.rs
utencore-core/src/jit/: mod.rs
utencore-core/src/plugin/: Manager.rs  Manifest.rs  mod.rs
utencore-core/src/ucsl/: mod.rs
utencore-core/src/vm/: Dispatch.rs  Gc.rs  Namespace.rs  Tests.rs  Unsafe.rs  VmConfig.rs  builtins.rs  call.rs  dispatch.rs  dispatch.rs.bak  mod.rs  stdlib.rs
utencore-core/src/vm/Dispatch/: Helpers.rs  Oop.rs  mod.rs
utencore-core/tests/: bytecode_tests.rs  vm_tests.rs
utencore-gc/: Cargo.toml
utencore-gc/src/: lib.rs  tests.rs
utencore-gc/src/memory/: mark_sweep.rs  mod.rs  refcount.rs
utencore-types/: Cargo.toml
utencore-types/src/: error.rs  lib.rs  tests.rs  types.rs
utencore-types/src/opcodes/: Info.rs  info.rs  mod.rs
