[package]
name = "utencore"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Uten Core — a universal stack-based language VM"

[lib]
name = "utencore"
crate-type = ["lib", "cdylib"]

[dependencies]
utencore-types = { path = "../utencore-types" }
utencore-bytecode = { path = "../utencore-bytecode" }
utencore-gc = { path = "../utencore-gc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
libloading = "0.8"
llvm-sys = { version = "180", optional = true }
rustc-hash = "2"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
libc = "0.2"
bitflags = "2"
num-bigint = "0.4"
rayon = "1"

[target.'cfg(unix)'.dependencies]
libffi-sys = { version = "3", features = ["system"] }

[target.'cfg(windows)'.dependencies]
libffi-sys = "3"

[features]
default = []
no-cib = []
jit = ["llvm-sys"]
