[package]
name = "utencore-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Uten Core — type system (UValue, HeapObject, opcodes, errors)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
num-bigint = "0.4"
bitflags = "2"
thiserror = "2"
