[package]
name = "py2uc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python to UtenCore bytecode compiler plugin"

[lib]
name = "py2uc"
crate-type = ["lib", "cdylib"]

[dependencies]
utencore = { path = "../../utencore-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
# For parsing Python AST from compiled .pyc files
# In production we'd use a Python parser; for now the plugin framework
